--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     <!-- <script src="JavaScript/02.js"></script> -->
     <!-- <script src="JavaScript/03.js"></script> -->
     <!-- <script src="JavaScript/04.js"></script> -->
-    <script src="JavaScript/05.js"></script>
+    <!-- <script src="JavaScript/05.js"></script> -->
+    <!-- <script src="JavaScript/06.js"></script> -->
+    <!-- <script src="JavaScript/07.js"></script> -->
+    <!-- <script src="JavaScript/08.js"></script> -->
+    <!-- <script src="JavaScript/09.js"></script> -->
+    <!-- <script src="JavaScript/10.js"></script> -->
 
 </body>
 </html>
