--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <!-- <script src="JavaScript/08.js"></script> -->
     <!-- <script src="JavaScript/09.js"></script> -->
     <!-- <script src="JavaScript/10.js"></script> -->
+    <!-- <script src="JavaScript/11.js"></script> -->
+    <script src="JavaScript/12.js"></script>
 
 </body>
 </html>
