--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Actividad 2 - JavaScript</title>
-</head>
-<body>
-    
+  </head>
+  <body>
     <!-- <script src="JavaScript/01.js"></script> -->
     <!-- <script src="JavaScript/02.js"></script> -->
     <!-- <script src="JavaScript/03.js"></script> -->
     <!-- <script src="JavaScript/04.js"></script> -->
-    <!-- <script src="JavaScript/05.js"></script> -->
+    <script src="JavaScript/05.js"></script>
     <!-- <script src="JavaScript/06.js"></script> -->
     <!-- <script src="JavaScript/07.js"></script> -->
     <!-- <script src="JavaScript/08.js"></script> -->
     <!-- <script src="JavaScript/09.js"></script> -->
     <!-- <script src="JavaScript/10.js"></script> -->
     <!-- <script src="JavaScript/11.js"></script> -->
-    <script src="JavaScript/12.js"></script>
-
-</body>
+    <!-- <script src="JavaScript/12.js"></script> -->
+    <!-- <script src="JavaScript/13.js"></script> -->
+    <!-- <script src="JavaScript/14.js"></script> -->
+    <!-- <script src="JavaScript/15.js"></script> -->
+    <!-- <script src="JavaScript/16.js"></script> -->
+  </body>
 </html>
