avance 4 (se organizaron los archivos)

--- a/index.html
+++ b/index.html
@@ -4,23 +4,59 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Actividad 2 - JavaScript</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
-    <!-- <script src="JavaScript/01.js"></script> -->
-    <!-- <script src="JavaScript/02.js"></script> -->
-    <!-- <script src="JavaScript/03.js"></script> -->
-    <!-- <script src="JavaScript/04.js"></script> -->
-    <script src="JavaScript/05.js"></script>
-    <!-- <script src="JavaScript/06.js"></script> -->
-    <!-- <script src="JavaScript/07.js"></script> -->
-    <!-- <script src="JavaScript/08.js"></script> -->
-    <!-- <script src="JavaScript/09.js"></script> -->
-    <!-- <script src="JavaScript/10.js"></script> -->
-    <!-- <script src="JavaScript/11.js"></script> -->
-    <!-- <script src="JavaScript/12.js"></script> -->
-    <!-- <script src="JavaScript/13.js"></script> -->
-    <!-- <script src="JavaScript/14.js"></script> -->
-    <!-- <script src="JavaScript/15.js"></script> -->
-    <!-- <script src="JavaScript/16.js"></script> -->
+  <body class="body">
+    <h1 class="body__title">Ejercicios 2 JavaScript</h1>
+    <section class="section">
+      <a href="HTML/index01.html" target="_blank" class="exercise"
+        >Ejercicio #01</a
+      >
+      <a href="HTML/index02.html" target="_blank" class="exercise"
+        >Ejercicio #02</a
+      >
+      <a href="HTML/index03.html" target="_blank" class="exercise"
+        >Ejercicio #03</a
+      >
+      <a href="HTML/index04.html" target="_blank" class="exercise"
+        >Ejercicio #04</a
+      >
+      <a href="HTML/index05.html" target="_blank" class="exercise"
+        >Ejercicio #05</a
+      >
+      <a href="HTML/index06.html" target="_blank" class="exercise"
+        >Ejercicio #06</a
+      >
+      <a href="HTML/index07.html" target="_blank" class="exercise"
+        >Ejercicio #07</a
+      >
+      <a href="HTML/index08.html" target="_blank" class="exercise"
+        >Ejercicio #08</a
+      >
+      <a href="HTML/index09.html" target="_blank" class="exercise"
+        >Ejercicio #09</a
+      >
+      <a href="HTML/index10.html" target="_blank" class="exercise"
+        >Ejercicio #10</a
+      >
+      <a href="HTML/index11.html" target="_blank" class="exercise"
+        >Ejercicio #11</a
+      >
+      <a href="HTML/index12.html" target="_blank" class="exercise"
+        >Ejercicio #12</a
+      >
+      <a href="HTML/index13.html" target="_blank" class="exercise"
+        >Ejercicio #13</a
+      >
+      <a href="HTML/index14.html" target="_blank" class="exercise"
+        >Ejercicio #14</a
+      >
+      <a href="HTML/index15.html" target="_blank" class="exercise"
+        >Ejercicio #15</a
+      >
+      <a href="HTML/index16.html" target="_blank" class="exercise"
+        >Ejercicio #16</a
+      >
+    </section>
   </body>
 </html>
